--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,13 +1,13 @@
 
-
 name: unit-test
 
 on:
-workflow_dispatch: [master]
+workflow_dispatch: 
+branches:
+        -master
 
 jobs:
 build:
-
 runs-on: ubuntu-latest
 
 steps:
